# threads-laba-5

./: CMakeLists.txt  main.cpp
